# uwcl_rbpf

./: Cargo.toml  README.md
benches/: elf_loader.rs  jit_compile.rs  memory_mapping.rs  vm_execution.rs
cli/: Cargo.toml
cli/src/: main.rs
examples/: disassemble.rs  to_json.rs  uptime.rs
src/: assembler.rs  ebpf.rs  helpers.rs  jit.rs  syscalls.rs  vm.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
tests/: assembler.rs  disassembler.rs  misc.rs  ubpf_execution.rs  ubpf_verifier.rs
